[gd_scene load_steps=2 format=2]

[ext_resource path="res://views/main_view/base_app_info.gd" type="Script" id=1]

[node name="BaseAppInfo" type="VBoxContainer"]
margin_left = 28.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="AppNameLabel" type="Label" parent="."]
margin_right = 1572.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "App name"
align = 1

[node name="AppName" type="LineEdit" parent="."]
margin_top = 18.0
margin_right = 1572.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 46.0
margin_right = 1572.0
margin_bottom = 50.0

[node name="Path" type="Label" parent="."]
margin_top = 54.0
margin_right = 1572.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Path"
align = 1

[node name="FileSelect" type="HBoxContainer" parent="."]
margin_top = 72.0
margin_right = 1572.0
margin_bottom = 96.0

[node name="Path" type="LineEdit" parent="FileSelect"]
margin_right = 1526.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Load" type="Button" parent="FileSelect"]
margin_left = 1530.0
margin_right = 1572.0
margin_bottom = 24.0
text = "Load"

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 100.0
margin_right = 1572.0
margin_bottom = 104.0

[node name="ArgsLabel" type="Label" parent="."]
margin_top = 108.0
margin_right = 1572.0
margin_bottom = 122.0
text = "Args (no spaces)"
align = 1

[node name="Args" type="VBoxContainer" parent="."]
margin_top = 126.0
margin_right = 1572.0
margin_bottom = 126.0

[node name="ArgContainer" type="HBoxContainer" parent="."]
margin_top = 130.0
margin_right = 1572.0
margin_bottom = 154.0

[node name="ArgInput" type="LineEdit" parent="ArgContainer"]
margin_right = 1531.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AddArg" type="Button" parent="ArgContainer"]
margin_left = 1535.0
margin_right = 1572.0
margin_bottom = 24.0
text = "Add"

[node name="HSeparator3" type="HSeparator" parent="."]
margin_top = 158.0
margin_right = 1572.0
margin_bottom = 162.0
